# whisper_chunk_transcribe

./: .gitignore  README.md  pyproject.toml  update_whisper.sh  whisper_chunk_transcribe.code-workspace
docker/: Dockerfile  docker-compose.yml  docker.md  run-in-docker.sh
docs/: db_populate_data.md  helper_classes.md  helper_scripts.md  prepare_audio.md  process_audio_wrapper.md  transcription_processor.md  transcription_wrapper.md  utils.md
reproduce-existing-solutions/: hf.env
reproduce-existing-solutions/Distil-Whisper/: Distil_Whisper_Benchmark.ipynb
reproduce-existing-solutions/Fine-Tune Whisper For Multilingual ASR with 🤗 Transformers/: fine_tune_whisper.ipynb  fine_tune_whisper_bd.ipynb
reproduce-existing-solutions/Fine-Tune-Whisper-For-Multilingual-ASR-with-Transformers/: fine-tune-whisper-logging-test.ipynb  fine-tune-whisper.ipynb  fine_tune_whisper_bd copy.ipynb  fine_tune_whisper_bd.ipynb  log_output.txt
reproduce-existing-solutions/QLoRA-Efficient-Fine-Tuning-of-Language-Models/: PEFT_llama_colab.ipynb  peft_bnb_whisper_large_v2_training.ipynb
reproduce-existing-solutions/QLoRA: Efficient Fine-Tuning of Language Models/: PEFT_llama_colab.ipynb  (+1 more)
whisper_chunk_transcribe/: .env  README.md  audio_processor.py  database.py  db_populate_data.sql  espn_db_schema.sql  experiment_runner.py  helper_classes.py  helper_determine_prompt_length_tokens.py  helper_player_team_names.py  prepare_audio.py  process_audio_wrapper.py  pyproject.toml  transcription_processor.py  transcription_wrapper.py  update_whisper.sh  utils.py
(+25 files in other folders)
